# Bookshop-management-system-with-UDP

./: LICENSE  README.md
Shop Application with UDP/ShopApp/: CMakeLists.txt  addcustomerwidget.cpp  addcustomerwidget.h  additemswidget.cpp  additemswidget.h  customer.cpp  customer.h  item.cpp  item.h  main.cpp  mainwindow.cpp  mainwindow.h  restockwidget.cpp  restockwidget.h  transaction.cpp  transaction.h  transactionwidget.cpp  transactionwidget.h
Shop Application with UDP/UDP/: CMakeLists.txt  main.cpp  udp.cpp  udp.h
